--- a/index.html
+++ b/index.html
@@ -126,7 +126,8 @@
 
             <div id="loginSection" class="mb-6 flex flex-col items-center justify-center">
                 <h3 class="text-xl font-semibold text-gray-200 mb-4">Giriş Yap</h3>
-                <form id="adminLoginForm" class="w-full max-w-sm space-y-4"> <div>
+                <form id="adminLoginForm" class="w-full max-w-sm space-y-4">
+                    <div>
                         <label for="adminEmail" class="sr-only">E-posta</label>
                         <input type="email" id="adminEmail" placeholder="E-posta" required class="w-full p-3 bg-gray-700 border border-gray-600 rounded-lg focus:outline-none focus:ring-2 focus:ring-indigo-500 text-white placeholder-gray-400">
                     </div>
@@ -141,7 +142,8 @@
                 <button id="logoutBtn" class="bg-red-600 hover:bg-red-700 text-white font-bold py-3 px-4 rounded-lg transition-all flex items-center justify-center gap-2 mt-4 hidden">
                     <i class="fa fa-sign-out-alt"></i> Çıkış Yap
                 </button>
-                <div id="adminLoginMessage" class="mt-4 text-center text-sm font-medium"></div> </div>
+                <div id="adminLoginMessage" class="mt-4 text-center text-sm font-medium"></div>
+            </div>
 
             <div class="mb-6 border-b border-gray-700">
                 <nav class="-mb-px flex space-x-4 md:space-x-8 overflow-x-auto" aria-label="Tabs">
